cmake_minimum_required(VERSION 3.16)
project(OperatingSystems)

set(CMAKE_CXX_STANDARD 14)

add_executable(OperatingSystems
        .idea/.gitignore
        .idea/misc.xml
        .idea/modules.xml
        .idea/OperatingSystems.iml
        .idea/vcs.xml
        .idea/workspace.xml
        README.md)
